--- a/views/tasks.ejs
+++ b/views/tasks.ejs
@@ -81,8 +81,9 @@
         </section>
         <br>
         <section>
-            <h3>Most Taken Tasks SO Far </h3>
+            <h3>Create Task </h3>
             <p>Method: POST <br>
+                Required Parameters: name <br>
                 Request URL: <a href="./createTask" target="_blank">
                     https://hometasks.herokuapp.com/createTask </a><br>
                 Response: JSON of Most Tasks done so far.</p>
@@ -91,24 +92,27 @@
         <section>
             <h3> Get specific task by ID </h3>
             <p>Method: GET<br>
+                Required Parameters: Id <br>
                 Request URL: <a href="./tasks" target="_blank">
-                    https://hometasks.herokuapp.com/tasks </a><br>
+                    https://hometasks.herokuapp.com/tasks/{id} </a><br>
                 Response: JSON of Most Tasks done so far.</p>
         </section>
         <br>
         <section>
             <h3>Update specific task by id </h3>
             <p>Method: PUT<br>
-                Request URL: <a href="./tasks" target="_blank">
-                    https://hometasks.herokuapp.com/tasks </a><br>
+            Required Parameters: Id <br>
+            Request URL: <a href="./tasks" target="_blank">
+                    https://hometasks.herokuapp.com/tasks/{id} </a><br>
                 Response: JSON of Most Tasks done so far.</p>
         </section>
         <br>
         <section>
             <h3>Delete specific task by id </h3>
             <p>Method: DELETE<br>
+                Required Parameters: Id <br>
                 Request URL: <a href="./tasks" target="_blank">
-                    https://hometasks.herokuapp.com/tasks </a><br>
+                    https://hometasks.herokuapp.com/tasks/{id} </a><br>
                 Response: JSON of Most Tasks done so far.</p>
         </section>
     </div>
